Applied feedback from review
Improved explanations and formatting in guides for date-time-picker, input-date-time, input-date, and input-time components. Clarified range selection behavior, input formats, and updated references to related documentation for better usability and consistency.

--- a/docs/components/date-time-picker/guide.mdx
+++ b/docs/components/date-time-picker/guide.mdx
@@ -27,7 +27,7 @@ doc-type: 'tab-item'
 ## Behavior in context
 
 - **Combined selection**: Users select both a date and a time before confirming their choice. The selection is only finalized when the confirmation button is clicked.
-- **Range selection**: In range mode, users select a date range with a single time value applied to both the start and end dates. For different timestamps (dates with different times) use separate date time pickers for start and end.
+- **Range selection**: Range mode allows users to select a start and end date while using one shared time value for both. If start and end need different times, use two separate date time pickers instead.
 - **Month navigation**: Users can navigate between months using the previous and next buttons in the header. This allows quick access to dates outside the current view.
 - **Interaction**: Users can navigate through the date time picker using the keyboard. The following keys are supported:
   - **Tab**: Navigate between areas of the picker (header, body, time input, footer).
@@ -64,6 +64,6 @@ Individual calendar dates within a date time picker have five states: Default, h
 
 - [Date picker](../date-picker)
 - [Time picker](../time-picker)
-- [Date time input](../input)
+- [Date time input](../input-date-time)
 - [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
 - [W3C date picker accessibility reference](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-datepicker/)
