--- a/docs/components/input-date-time/guide.mdx
+++ b/docs/components/input-date-time/guide.mdx
@@ -31,7 +31,7 @@ formReady: true
 - **Error message**: Feedback text when date or time is not parsable. We typically use this to inform users that the entered date time format is incorrect and guide them to enter a valid date and time.
 - **Format**: Define the date and time format, e.g. `yyyy/LL/dd TT` for 2024/06/15 13:07:04.
 - **Min and max dates**: Restrict the selectable date range by defining the earliest and latest dates users can choose.
-- **Date time picker appearance**: See [date time picker](../date-time-picker#options).
+- **Date time picker appearance**: See [date time picker](../date-time-picker/guide#options).
 
 ## Behavior in context
 
