Applied feedback from dev and final edit
Improved clarity and consistency in guides for date-time picker, input-date-time, input-date, and input-time components. Adjusted format descriptions, added details for week start and week numbers, and refined terminology for selected dates and current day.

--- a/docs/components/date-time-picker/guide.mdx
+++ b/docs/components/date-time-picker/guide.mdx
@@ -14,7 +14,7 @@ doc-type: 'tab-item'
 
 - **Value**: See [date picker](../date-picker/guide#options) and [time picker](../time-picker/guide#options).
 - **Single selection**: See [date picker](../date-picker/guide#options).
-- **Format**: Choose the date and time format (e.g. `yyyy/LL/dd` and `HH:mm:ss`).
+- **Format**: Choose the date and time format, e.g. `yyyy/LL/dd` and `HH:mm:ss`.
 - **Min and max dates**: See [date picker](../date-picker/guide#options).
 - **Date picker appearance**: See [date picker](../date-picker/guide#options).
   - **Week start**: Define which day the week starts on. By default, it will be defined based on the locale.
