--- a/docs/components/input-date-time/guide.mdx
+++ b/docs/components/input-date-time/guide.mdx
@@ -29,9 +29,11 @@ formReady: true
 - **Placeholder**: See [form field](../forms-field/guide#options). We typically use a placeholder to show an example date time format to assist users when the field is empty.
 - **Text alignment**: See [form field](../forms-field/guide#options) (by default at start).
 - **Error message**: Feedback text when date or time is not parsable. We typically use this to inform users that the entered date time format is incorrect and guide them to enter a valid date and time.
-- **Format**: Define the date and time format, e.g. `yyyy/LL/dd TT` for 2024/06/15 13:07:04.
+- **Format**: Choose the date and time format, e.g. `yyyy/LL/dd` and `HH:mm:ss`.
 - **Min and max dates**: Restrict the selectable date range by defining the earliest and latest dates users can choose.
 - **Date time picker appearance**: See [date time picker](../date-time-picker/guide#options).
+  - **Week start**: Define which day the week starts on. By default, it will be defined based on the locale.
+  - **Week numbers**: Show calendar weeks on the left side of the calendar when needed for reference.
 
 ## Behavior in context
 
