updated warning messages and removed bestpractices

--- a/docs/guidelines/language/warning-messages.mdx
+++ b/docs/guidelines/language/warning-messages.mdx
@@ -24,15 +24,15 @@ We follow this three-step approach when creating our warning messages. This ensu
 
 ### Use warning messages only when an action or awareness is genuinely needed.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Temperature readings from Zone 3 approaching 30°. Check cooling system and ensure all windows and doors are closed.
 </div></div>
 
 ### Use clear, understandable titles and avoid generic warning messages.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Temperature approaching 30°
 </div></div>
 
@@ -43,14 +43,14 @@ Temperature warning
 
 ### Provide specific and clear consequences and solutions.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Heading: Leave without saving
 Description: You’re about to leave this page. Unsaved changes will be lost. Go back to save changes or exit without saving.
 Button: Leave without saving
 Button: Go back
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 Do you want to leave the page?
 Button: Continue
 Button: OK
@@ -60,19 +60,19 @@ Button: Cancel
 
 ### Avoid using words like "may", "might" or "possibly will" when explaining problems.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Your changes will be lost if not saved.
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 Your changes might be lost if not saved.
 </div>
 </div>
 
 ### Include links to help pages or troubleshooting steps to avoid the consequences when possible.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Heading: Login attempt from unknown device
 Description: Review access settings or security guidelines to prevent unauthorized access.
 Button: Open guidelines
@@ -80,8 +80,8 @@ Button: Open access settings
 </div>
 </div>
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 Heading: Unauthorized access attempt on Control Panel A
 Description: Review access logs and verify user credentials.
 Button: Open access logs
